Project 3: Passes all functionality tests